<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207">

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/orange"
            android:textSize="30sp" />


        <androidx.cardview.widget.CardView
            android:layout_width="352dp"
            android:layout_height="124dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/light_orange"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/change_language"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_baseline_navigate_before_24" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/russian"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="45dp"
                    android:layout_height="49dp"
                    app:srcCompat="@drawable/ic_baseline_navigate_next_24" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="352dp"
            android:layout_height="155dp"
            android:layout_marginTop="27dp"
            android:backgroundTint="@color/light_orange"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/notif_settings"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/liner23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/notification" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/textView12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:text="@string/updates" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/textView12" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            app:cardCornerRadius="20dp">

            <Button
                android:id="@+id/delete_account"
                android:layout_width="347dp"
                android:layout_height="70dp"
                android:backgroundTint="@color/light_orange"
                android:text="@string/delete_account"
                android:textSize="20sp">

            </Button>
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/back"
            style="@style/imagebutton2_style"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="160dp"
            android:backgroundTint="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>