<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="269dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/zakupka_nadpis" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textSize="20sp"
            android:layout_marginTop="90dp"
            android:textColor="@color/orange"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="115dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="368dp"
            android:layout_height="127dp"
            android:text="@string/inform"
            android:textSize="20sp"
            android:layout_marginTop="90dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="369dp"
            android:layout_height="104dp"
            android:text="@string/inform2"
            android:textSize="20sp"
            android:layout_marginTop="90dp"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="390dp" />

        <ImageButton
            android:id="@+id/back"
            style="@style/imagebutton2_style"
            android:layout_marginEnd="160dp"
            android:backgroundTint="@color/white"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.005"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="659dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>